feat(device) detect new brand ONYX BOOX models: Kon Tiki feat(device) detect brand Logic models: X60 Plus

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19823,11 +19823,13 @@ iMars:
     - regex: 'VIVI_8'
       model: 'VIVI 8'
 
-# Logic
+# Logic (logicmobility.com)
 Logic:
-  regex: 'LOGIC[_ ](X[135]|X4M|L5D|X5[AFT]|X60G|L61)(:?[_ ]LITE2?)?(?:[);/ ]|$)'
+  regex: 'LOGIC[_ ](X[135]|X4M|L5D|X5[AFT]|X60G|L61|X60_PLUS)(:?[_ ]LITE2?)?(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: 'LOGIC[_ ]X60_PLUS(?:[);/ ]|$)'
+      model: 'X60 Plus'
     - regex: 'LOGIC[_ ](X5|X4M)[_ ]LITE(?:[);/ ]|$)'
       model: '$1 Lite'
     - regex: 'LOGIC[_ ](X5)[_ ]LITE2(?:[);/ ]|$)'
@@ -21887,8 +21889,14 @@ Kyowon:
 
 # LT Mobile or LT Electronics (lt-smartphone.com)
 LT Mobile:
-  regex: '(?:LT-NOTE 10S)(?:[);/ ]|$)'
+  regex: '(?:LT-NOTE 10S)'
   device: 'smartphone'
   models:
     - regex: 'LT-NOTE 10S'
       model: 'Note 10S'
+
+# ONYX BOOX (onyx-boox.ru)
+ONYX BOOX:
+  regex: 'KON_TIKI(?:[);/ ]|$)'
+  device: 'tablet'
+  model: 'Kon Tiki'
