--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4337,3 +4337,21 @@
     model: Joy Tab
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; KON_TIKI) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 Safari/537.36 OPR/62.3.3146.57763
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 62.3.3146.57763
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: ONYX BOOX
+    model: Kon Tiki
+  os_family: Android
+  browser_family: Opera
