--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -5677,3 +5677,21 @@
     model: X60 Plus
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 6.0; LT700 PRO Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/72.0.3626.105 Mobile Safari/537.36 OPR/38.1.2254.136033
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    version: 38.1.2254.136033
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: QMobile
+    model: Noir LT700 Pro
+  os_family: Android
+  browser_family: Opera
