--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2594,7 +2594,9 @@ Asus:
       model: 'ZenFone 3 Max'
     - regex: '(?:ASUS_)?A001'
       model: 'ZenFone 3 Ultra'
-    - regex: '(?:ASUS_)?(X00LDA|Z01MD)'
+    - regex: '(?:ASUS_)?(?:ZD552KL|Z01MDA)'
+      model: 'ZenFone 4 Selfie Pro'
+    - regex: '(?:ASUS_)?(?:X00LDA|Z01MD|ZD553KL)'
       model: 'ZenFone 4 Selfie'
     - regex: '(?:ASUS_)?(?:X00LD|Z01KS|Z01KDA|ZE554KL)'
       model: 'ZenFone 4'
@@ -2602,10 +2604,6 @@ Asus:
       model: 'ZenFone 4 Max'
     - regex: '(?:ASUS_)?X015D'
       model: 'ZenFone 4 Max Plus'
-    - regex: 'ZD552KL'
-      model: 'ZenFone 4 Selfie Pro'
-    - regex: 'ZD553KL'
-      model: 'ZenFone 4 Selfie'
     - regex: '(?:ASUS_)?(:?Z01G[DS]|ZS551KL)'
       model: 'ZenFone 4 Pro'
     - regex: '(?:ASUS_)?ZB602KL'
@@ -14544,7 +14542,7 @@ QMobile:
       model: 'Jazz X JS$1'
     - regex: 'Noir X1S'
       model: 'Noir X1S'
-    - regex: 'LT(700) PRO'
+    - regex: 'LT([57]00) PRO'
       model: 'Noir LT$1 Pro'
     - regex: 'LUNA PRO'
       model: 'Luna Pro'
