feat(device) rename model ZenFone 4 Selfie => ZenFone 4 Selfie Pro (Z01MD, Z01MDA) issue #6732

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2594,9 +2594,9 @@ Asus:
       model: 'ZenFone 3 Max'
     - regex: '(?:ASUS_)?A001'
       model: 'ZenFone 3 Ultra'
-    - regex: '(?:ASUS_)?(?:ZD552KL|Z01MDA)'
+    - regex: '(?:ASUS_)?(?:ZD552KL|Z01MDA?)(?:[);/ ]|$)'
       model: 'ZenFone 4 Selfie Pro'
-    - regex: '(?:ASUS_)?(?:X00LDA|Z01MD|ZD553KL)'
+    - regex: '(?:ASUS_)?(?:X00LDA|ZD553KL)'
       model: 'ZenFone 4 Selfie'
     - regex: '(?:ASUS_)?(?:X00LD|Z01KS|Z01KDA|ZE554KL)'
       model: 'ZenFone 4'
