--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -2443,7 +2443,7 @@
   device:
     type: smartphone
     brand: Asus
-    model: ZenFone 4 Selfie
+    model: ZenFone 4 Selfie Pro
   os_family: Android
   browser_family: Chrome
 - 
