feat(device) rename model ZenFone Max Pro => ZenFone Max Pro M1 (ZB602KL) issue #6732

--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -3321,7 +3321,7 @@
   device:
     type: smartphone
     brand: Asus
-    model: ZenFone Max Pro
+    model: ZenFone Max Pro M1
   os_family: Android
   browser_family: Opera
 - 
