--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2520,7 +2520,7 @@ Asus:
       model: 'ZenFone C'
     - regex: '(?:ASUS_)?(X00P[SD]|ZB555KL)'
       model: 'ZenFone Max M1'
-    - regex: '(?:ASUS_)?(ZB601KL)|ZenFone Max Pro M1'
+    - regex: '(?:ASUS_)?(?:ZB60[12]KL)|ZenFone Max Pro M1'
       model: 'ZenFone Max Pro M1'
     - regex: '(?:ASUS_)?(X01([AB]D)|ZB633KL)(?:[);/ ]|$)'
       model: 'ZenFone Max M2'
@@ -2606,8 +2606,6 @@ Asus:
       model: 'ZenFone 4 Max Plus'
     - regex: '(?:ASUS_)?(:?Z01G[DS]|ZS551KL)'
       model: 'ZenFone 4 Pro'
-    - regex: '(?:ASUS_)?ZB602KL'
-      model: 'ZenFone Max Pro'
     - regex: '(?:ASUS_)?Z00XS'
       model: 'ZenFone Zoom'
     - regex: '(?:ASUS_)?(?:Z01QD|ZS600KL)'
