feat(device) detect brand Asus models: PadFone Mini (T00C), PadFone E (T008),  PadFone Infinity (T004), ZenFone 3 Max (X008D), ZenFone Go (X009D)
feat(device) add test for brand Asus models: PadFone Infinity

issue #6732

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2503,10 +2503,14 @@ Asus:
     # explicit smartphone models
     - regex: '(?:ASUS_)?T00N'
       model: 'PadFone S'
-    - regex: '(?:ASUS_)?T00E'
+    - regex: '(?:ASUS_)?T00[CE]'
       model: 'PadFone Mini'
     - regex: '(?:ASUS[-_])?T00T'
       model: 'PadFone X Mini'
+    - regex: 'PadFone T008'
+      model: 'PadFone E'
+    - regex: 'PadFone T004'
+      model: 'PadFone Infinity'
     - regex: '(?:ASUS_)?A002(A)?'
       model: 'ZenFone AR'
     - regex: '(?:ASUS_)?A006'
@@ -2557,7 +2561,7 @@ Asus:
       model: 'ZenFone Max Pro M2'
     - regex: '(?:ASUS_)?X014D'
       model: 'ZenFone Go Plus'
-    - regex: '(?:ASUS_)?(L001|X00[7AB]D|X009[DB][DA]|Z00[SV]D|ZB500K[LG]|ZB551KL)'
+    - regex: '(?:ASUS_)?(L001|X00[7AB]D|X009[DB][DA]|X009D|Z00[SV]D|ZB500K[LG]|ZB551KL)'
       model: 'ZenFone Go'
     - regex: '(?:ASUS_)?X013D'
       model: 'ZenFone Go Life'
@@ -2573,6 +2577,8 @@ Asus:
       model: 'ZenFone Pegasus 2 Plus'
     - regex: '(?:ASUS_)?(X00GD)'
       model: 'ZenFone Pegasus 3S Max'
+    - regex: '(?:ASUS_)?(?:X00D[DS]|X008D)|ZC553KL'
+      model: 'ZenFone 3 Max'
     - regex: '(?:ASUS_)?(X008)'
       model: 'ZenFone 3 Pegasus'
     - regex: '(?:ASUS_)?(ZE553KL|Z01HD)'
@@ -2587,8 +2593,6 @@ Asus:
       model: 'ZenFone 3'
     - regex: '(?:ASUS_)?Z01B[DS]|ZC551KL'
       model: 'ZenFone 3 Laser'
-    - regex: '(?:ASUS_)?X00D[DS]|ZC553KL'
-      model: 'ZenFone 3 Max'
     - regex: '(?:ASUS_)?A001'
       model: 'ZenFone 3 Ultra'
     - regex: '(?:ASUS_)?(X00LDA|Z01MD)'
