feat(device) detect new brand GFive models: President Gold 9, President Gold 10 feat(device) detect brand HP model: EliteBook 820 G2 feat(device) detect brand Huawei model: Honor 9X Pro (HLK-L42) feat(device) detect brand Essentielb model: HEYou 30 feat(device) detect brand Videocon model: Ultra 50 feat(device) detect brand Gionee model: F103 Pro feat(device) detect brand QMobile model: Hot Pro 2 feat(device) detect brand Tecno Mobile model: S9 feat(device) detect brand Blu model: Vivo 5 Mini feat(device) detect brand ZTE model: Blade 20 Smart (2050RU) feat(device) detect brand Xiaomi models: MI 4W, MI MIX 2S

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -506,7 +506,7 @@ Palm:
 
 # HP or Hewlett-Packard
 HP:
-  regex: 'Hewlett-Packard|TouchPad/\d+\.\d+|hp-tablet|HP ?iPAQ|webOS.*P160U|HP (?:Pro )?Slate|HP [78]|HP 10 Plus|Compaq [7|8]|HP; [^;/)]+'
+  regex: 'Hewlett-Packard|HP EliteBook 820|TouchPad/\d+\.\d+|hp-tablet|HP ?iPAQ|webOS.*P160U|HP (?:Pro )?Slate|HP [78]|HP 10 Plus|Compaq [7|8]|HP; [^;/)]+'
   device: 'smartphone'
   models:
     - regex: 'HP Slate 6 Voice Tab'
@@ -546,6 +546,9 @@ HP:
     - regex: 'HP ProBook (6560b)'
       device: 'desktop'
       model: 'ProBook $1'
+    - regex: 'HP EliteBook 820 G2'
+      device: 'desktop'
+      model: 'EliteBook 820 G2'
 
 # TiPhone
 TiPhone:
@@ -2743,7 +2746,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL)(?:[);/ ]|$)'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo 5 Mini)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
@@ -2832,6 +2835,8 @@ Blu:
       model: 'Touchbook G7'
     - regex: '(?:BLU[_ ])?VIVO[ _]SELFIE'
       model: 'Vivo Selfie'
+    - regex: '(?:BLU[_ ])?Vivo 5 Mini'
+      model: 'Vivo 5 Mini'
 
     - regex: 'Touchbook M7 Pro'
       model: 'Touchbook M7 Pro'
@@ -5102,10 +5107,10 @@ Eton:
 
 # Essentielb
 Essentielb:
-  regex: '(?:Wooze[_ ]?(?:I55?|I45|X?L)|HEYOU[135])(?:[);/ ]|$)'
+  regex: '(?:Wooze[_ ]?(?:I55?|I45|X?L)|HEYOU(?:[135]|30))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'HEYOU([135])(?:[);/ ]|$)'
+    - regex: 'HEYOU([135]|30)(?:[);/ ]|$)'
       model: 'HEYou $1'
     - regex: 'Wooze[_ ]?((?:I55?|I45|X?L))(?:[);/ ]|$)'
       model: 'Wooze $1'
@@ -6196,7 +6201,7 @@ Ginzzu:
 
 # Gionee
 Gionee:
-  regex: '(?:GIO-)?GIONEE[ _-]?[a-z0-9]+|(?:Dream_D1|V188S?|GN[0-9]{3,4}[a-z]?)(?:[);/ ]|$)|F103(?: Pro)? Build|P5 mini Build|P7 Max Build|(M7 Power|F106L|F100A|F103S)(?:[);/ ]|$)'
+  regex: '(?:GIO-)?GIONEE[ _-]?[a-z0-9]+|(?:Dream_D1|V188S?|GN[0-9]{3,4}[a-z]?)(?:[);/ ]|$)|F103(?: Pro)?(?: Build|\))|P5 mini Build|P7 Max Build|(M7 Power|F106L|F100A|F103S|F103 Pro)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'GN810(?:[);/ ]|$)'
@@ -6206,8 +6211,6 @@ Gionee:
       model: 'GN$1'
     - regex: '(F106L|F100A|V188S|V188|F103S)(?:[);/ ]|$)'
       model: '$1'
-    - regex: 'F103( Pro)? Build'
-      model: 'F103$1'
     - regex: 'M7 Power(?:[);/ ]|$)'
       model: 'M7 Power'
     - regex: 'P5 mini Build'
@@ -6216,6 +6219,8 @@ Gionee:
       model: 'P7 Max'
     - regex: '(S11) Lite(?:[);/ ]|$)'
       model: '$1 Lite'
+    - regex: 'F103( Pro)?( BUILD|\))'
+      model: 'F103$1'
     - regex: '(?:(?:GIO-)?GIONEE[ _-])?Dream_D1(?:[);/ ]|$)'
       model: 'Dream D1'
     - regex: '(?:GIO-)?GIONEE[ _-]([a-z0-9_-]+).*Android'
@@ -6824,7 +6829,7 @@ Huawei:
       model: 'Honor 9S'
     - regex: 'HLK-AL00a?(?:[);/ ]|$)'
       model: 'Honor 9X'
-    - regex: 'HLK-(?:AL10|L41)(?:[);/ ]|$)'
+    - regex: 'HLK-(?:AL10|L4[12])(?:[);/ ]|$)'
       model: 'Honor 9X Pro'
     - regex: 'CAM-UL00(?:[);/ ]|$)'
       model: 'Honor Holly 3'
@@ -7379,7 +7384,7 @@ Hyundai:
 
 # iBall (iball.co.in)
 iBall:
-  regex: 'iBall[ _]([^;/)]+)[ _]Build|iBall_Slide|(?:Snap_4G2|6351-Q400i|iT-KSA0003|iT-KSA0012|iT-KSA0066|Avid|Twinkle_i5|Gorgeo[_ ]4GL|Blaze_V4|Wondro 10|Q27 4G|Andi (?:Wink|5G Blink) 4G)(?:[);/ ]|$)'
+  regex: 'iBall[ _]([^;/)]+)[ _]Build|iBall_Slide|(?:Snap[_ ]4G2|6351-Q400i|iT-KSA0003|iT-KSA0012|iT-KSA0066|Avid|Twinkle_i5|Gorgeo[_ ]4GL|Blaze_V4|Wondro 10|Q27 4G|Andi (?:Wink|5G Blink) 4G)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'Andi Wink 4G'
@@ -7388,7 +7393,7 @@ iBall:
     - regex: 'Andi 5G Blink 4G'
       device: 'smartphone'
       model: 'Andi 5G Blink 4G'
-    - regex: '(Snap_4G2|Avid|Twinkle_i5|Gorgeo[_ ]4GL|Blaze_V4|Wondro 10|Q27 4G)(?:[);/ ]|$)'
+    - regex: '(Snap[_ ]4G2|Avid|Twinkle_i5|Gorgeo[_ ]4GL|Blaze_V4|Wondro 10|Q27 4G)(?:[);/ ]|$)'
       model: '$1'
     - regex: '6351-Q400i(?:[);/ ]|$)'
       model: 'Slide'
@@ -14529,7 +14534,7 @@ Qilive:
 
 # QMobile
 QMobile:
-  regex: 'QMobile|QTab(?!10EW)|Q-Smart|(?:Noir X1S|LUNA PRO|NICE S|JazzX JS(?:[27]|10)(?: PRO)?|LT500 PRO|Q Infinity)(?:[);/ ]|$)'
+  regex: 'QMobile|QTab(?!10EW)|Q-Smart|(?:Noir X1S|LUNA PRO|NICE S|JazzX JS(?:[27]|10)(?: PRO)?|LT500 PRO|Q Infinity|Hot Pro 2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'JazzX JS7 PRO'
@@ -14538,6 +14543,8 @@ QMobile:
       model: 'Jazz X JS$1'
     - regex: 'Noir X1S'
       model: 'Noir X1S'
+    - regex: 'Hot Pro 2'
+      model: 'Hot Pro 2'
     - regex: 'LT500 PRO'
       model: 'Noir LT500 Pro'
     - regex: 'LUNA PRO'
@@ -15153,6 +15160,9 @@ Tecno Mobile:
       device: 'tablet'
     - regex: 'Tecno[ _]LB8'
       model: 'Pouvoir 3 Plus'
+    - regex: 'TECNO S9'
+      device: 'phablet'
+      model: 'S9'
     - regex: 'Tecno ([^;/]+) Build'
       model: '$1'
     - regex: 'Tecno[ _]?([a-z0-9_\-]+)'
@@ -15900,7 +15910,7 @@ Vestel:
 
 # Videocon
 Videocon:
-  regex: 'Videocon[_ \-]|(?:VT75C|V406018|V50(?:2430|3630|5024|5430|4630|5[98]20)|Z45_(?:Dazzle|Amaze)|Z45Q Star|Z50 Nova)(?:[);/ ]|$)'
+  regex: 'Videocon[_ \-]|(?:VT75C|V406018|V512930|V50(?:2430|3630|5024|5430|4630|5[98]20)|Z45_(?:Dazzle|Amaze)|Z45Q Star|Z50 Nova)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Videocon_V1585'
@@ -15923,6 +15933,8 @@ Videocon:
       model: 'Metal Pro 1'
     - regex: 'V406018(?:[);/ ]|$)'
       model: 'Starr 100'
+    - regex: 'V512930(?:[);/ ]|$)'
+      model: 'Ultra 50'
     - regex: '(V505430|V504630)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Z45_(Dazzle|Amaze)(?:[);/ ]|$)'
@@ -16593,6 +16605,8 @@ Xiaomi:
       model: 'MI 3'
     - regex: 'Mi-4c(?:[);/ ]|$)'
       model: 'MI 4C'
+    - regex: 'MI 4W(?:[);/ ]|$)'
+      model: 'MI 4W'
     - regex: 'Mi_4i(?:[);/ ]|$)'
       model: 'MI 4i'
     - regex: 'MI MAX 3(?:[);/ ]|$)'
@@ -17561,7 +17575,7 @@ ZTE:
       model: 'A1'
     - regex: 'A7020(?:[);/ ]|$)'
       model: 'Blade A7s (2020)'
-    - regex: 'ZTE 2050(?:[);/ ]|$)'
+    - regex: 'ZTE 2050(?:RU)?'
       model: 'Blade 20 Smart'
     - regex: '902ZT(?:[);/ ]|$)'
       model: 'Axon 10 Pro 5G'
@@ -21864,3 +21878,11 @@ Greentel:
   models:
     - regex: 'X1_Light_Lte'
       model: 'X1 Light LTE'
+
+# GFive or G'Five (www.gfivepakistan.com)
+GFive:
+  regex: '(?:PRESIDENT_GOLD_(9|10))(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'PRESIDENT_GOLD_(9|10)'
+      model: 'President Gold $1'
