--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6062,3 +6062,21 @@
     model: Redmi Note 10
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.2.2; TECNO S9 Build/JDQ39) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Safari/534.30 OPR/24.0.2254.115784
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 24.0.2254.115784
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Tecno Mobile
+    model: S9
+  os_family: Android
+  browser_family: Opera
