--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4284,20 +4284,21 @@
   os_family: Android
   browser_family: Opera
 -
-  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; ASUS_Z00LD Build/MMB29P; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/51.0.2704.81 Mobile Safari/537.36
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Snap 4G2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.125 Safari/537.36
   os:
     name: Android
-    version: 6.0.1
+    version: "6.0"
     platform: ""
   client:
     type: browser
-    name: Chrome Webview
-    version: 51.0.2704.81
+    name: Chrome
+    version: 84.0.4147.125
     engine: Blink
     engine_version: ""
   device:
-    type: smartphone
-    brand: Asus
-    model: ZenFone 2 Laser
+    type: tablet
+    brand: iBall
+    model: Snap 4G2
   os_family: Android
   browser_family: Chrome
+
