--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -1463,7 +1463,7 @@
   device:
     type: smartphone
     brand: Asus
-    model: PadFone T004
+    model: PadFone Infinity
   os_family: Android
   browser_family: Chrome
 - 
