feat(device) detect brand Meizu model: PRO 7 (PRO 7-S)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10248,7 +10248,7 @@ MEEG:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|MZ-16 X)(?:[);/ ]|$)'
+  regex: 'Meizu|MZ-[a-z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-[HS]| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|MZ-16 X)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -10302,7 +10302,7 @@ Meizu:
       model: 'M8 Lite'
     - regex: 'PRO 6'
       model: 'PRO 6'
-    - regex: 'PRO 7-H(?:[);/ ]|$)'
+    - regex: 'PRO 7-[HS](?:[);/ ]|$)'
       model: 'PRO 7'
     - regex: 'M031(?:[);/ ]|$)'
       model: 'MX Dual Core'
