feat(device) detect brand Iris model: I-S6 (IRS002-16)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -20325,7 +20325,7 @@ Pixela:
 
 # Iris
 Iris:
-  regex: '(?:Vox[_ ](?:[45]S|Alpha|POP|STEEL Plus|Energy)|IS2_?Plus|IS2S|Next_P_PRO)(?:[);/ ]|$)'
+  regex: '(?:Vox[_ ](?:[45]S|Alpha|POP|STEEL Plus|Energy)|IS2_?Plus|IS2S|Next_P_PRO|IRS002-16)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Vox[_ ]([45])S'
@@ -20346,6 +20346,8 @@ Iris:
       model: 'Next P Pro'
     - regex: 'IS2_?Plus'
       model: 'IS2 Plus'
+    - regex: 'IRS002-16'
+      model: 'I-S6'
     - regex: 'IS2S'
       model: 'IS2S'
 
