feat(device) detect brand Beelink model: GT King
issue #6517

--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -215,3 +215,21 @@
     model: LS424
   os_family: GNU/Linux
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm; Android 9; GTKing) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.198 YaBrowser/20.11.0.180.01 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 20.11.0.180.01
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Beelink
+    model: GT King
+  os_family: Android
+  browser_family: Unknown
