--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -20144,7 +20144,7 @@ Avenzo:
 
 # Beelink
 Beelink:
-  regex: '(?:Beelink (?:G[ST]1|LAKE I|SEA I|A1)|GT1mini-2|GT1-mini(?:-AT)?)(?:[);/ ]|$)'
+  regex: '(?:Beelink (?:G[ST]1|LAKE I|SEA I|A1)|GTKing|GT1mini-2|GT1-mini(?:-AT)?)(?:[);/ ]|$)'
   device: 'tv'
   models:
     - regex: 'Beelink (G[ST]1|LAKE I|SEA I|A1)(?:[);/ ]|$)'
@@ -20153,6 +20153,8 @@ Beelink:
       model: 'GT1 Mini'
     - regex: 'GT1mini-2(?:[);/ ]|$)'
       model: 'GT1 Mini 2'
+    - regex: 'GTKing(?:[);/ ]|$)'
+      model: 'GT King'
 
 # MAXVI
 MAXVI:
