--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1098,7 +1098,7 @@ Acteck:
 
 # Alba
 Alba:
-  regex: 'Alba (?:57|4|10 TABLET)(?:[);/ ]|$)'
+  regex: 'Alba ?(?:57|4|10 TABLET|7Nou)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Alba 57'
@@ -1108,6 +1108,9 @@ Alba:
     - regex: '10 TABLET'
       device: 'tablet'
       model: '10 Tablet'
+    - regex: 'Alba(7Nou)'
+      device: 'tablet'
+      model: '$1'
 
 # AllCall
 AllCall:
