--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4499,3 +4499,21 @@
     model: 7Nou
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: ozilla/5.0 (Linux; Android 8.1.0; Alba10Nou Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/83.0.4103.106 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Alba
+    model: 10Nou
+  os_family: Android
+  browser_family: Chrome
