feat(device) detect brand Alba models: 7Pie, 10Pie

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1098,7 +1098,7 @@ Acteck:
 
 # Alba
 Alba:
-  regex: 'Alba ?(?:57|4|10 TABLET|(?:7|10)Nou)(?:[);/ ]|$)'
+  regex: 'Alba ?(?:57|4|10 TABLET|(?:7|10)(?:Nou|Pie))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Alba 57'
@@ -1108,7 +1108,7 @@ Alba:
     - regex: '10 TABLET'
       device: 'tablet'
       model: '10 Tablet'
-    - regex: 'Alba((?:7|10)Nou)'
+    - regex: 'Alba((?:7|10)(?:Nou|Pie))'
       device: 'tablet'
       model: '$1'
 
