feat(device) detect brand QMobile model: E2 Noir

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14564,7 +14564,7 @@ Qilive:
 
 # QMobile (qmobile.com.pk)
 QMobile:
-  regex: 'QMobile|QTab(?!10EW)|Q-Smart|(?:Noir X1S|LUNA PRO|NICE S|JazzX JS(?:[27]|10)(?: PRO)?|LT[57]00 PRO|LT950|Q Infinity|Hot Pro 2)(?:[);/ ]|$)'
+  regex: 'QMobile|QTab(?!10EW)|Q-Smart|(?:E2 Noir|Noir X1S|LUNA PRO|NICE S|JazzX JS(?:[27]|10)(?: PRO)?|LT[57]00 PRO|LT950|Q Infinity|Hot Pro 2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'JazzX JS7 PRO'
@@ -14573,6 +14573,8 @@ QMobile:
       model: 'Jazz X JS$1'
     - regex: 'Noir X1S'
       model: 'Noir X1S'
+    - regex: 'E2 Noir'
+      model: 'E2 Noir'
     - regex: 'Hot Pro 2'
       model: 'Hot Pro 2'
     - regex: 'LT([57]00) PRO'
