--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -6415,3 +6415,20 @@
     model: Duopix F9
   os_family: Android
   browser_family: Chrome
+- user_agent: Mozilla/5.0 (Linux; Android 7.0; E2 Noir) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.66 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 87.0.4280.66
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: QMobile
+    model: E2 Noir
+  os_family: Android
+  browser_family: Chrome
