feat(device) detect brand Dell model: XPS 13 9360
issue #6733

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7264,3 +7264,19 @@
     model: BilimBook Mini
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Microsoft Office OneNote/16.0.13328.20478 (Windows/10.0; Desktop x64; en-GB; Universal app; Dell Inc./XPS 13 9360)
+  os:
+    name: Windows
+    version: "10.0"
+    platform: x64
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: 16.0.13328.20478
+  device:
+    type: desktop
+    brand: Dell
+    model: XPS 13 9360
+  os_family: Windows
+  browser_family: Unknown
