--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7280,3 +7280,19 @@
     model: XPS 13 9360
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Microsoft Office OneNote/16.0.13328.20478 (Windows/10.0; Desktop x64; en-GB; Universal app; Dell Inc./XXX TEST)
+  os:
+    name: Windows
+    version: "10.0"
+    platform: x64
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: 16.0.13328.20478
+  device:
+    type: desktop
+    brand: Dell
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
