feat(device) detect brand Centric model: G1 (CM4331) feat(device) detect brand Xolo model: Era 2V feat(device) detect brand InFocus models: M5s (IF9002), M6s (IF9003), Vision 3 Pro (IF9029)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7940,7 +7940,7 @@ Infinix:
 
 # InFocus
 InFocus:
-  regex: 'IF(9001|9007|9021|9035|9031)(?:[);/ ]|$)'
+  regex: 'IF(900[1237]|902[19]|903[15])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'IF9001'
@@ -7951,8 +7951,14 @@ InFocus:
       model: 'Turbo 5 Plus'
     - regex: 'IF9035'
       model: 'A2'
+    - regex: 'IF9002'
+      model: 'M5s'
+    - regex: 'IF9003'
+      model: 'M6s'
     - regex: 'IF9031'
       model: 'Vision 3'
+    - regex: 'IF9029'
+      model: 'Vision 3 Pro'
 
 # InnJoo
 InnJoo:
@@ -16832,7 +16838,7 @@ Xion:
 
 # Xolo
 Xolo:
-  regex: 'Xolo|(?:Q600|Q700s?|Q800|Q1000s|Q1000[ _]Opus|Q1010i|Q2000|Omega[ _]5.[05]|Era5X|Era_4X(?:_2GB)?)(?:[);/ ]|$)|BLACK-1XM'
+  regex: 'Xolo|(?:Q600|Q700s?|Q800|Q1000s|Q1000[ _]Opus|Q1010i|Q2000|Omega[ _]5.[05]|Era5X|Era[ _]2V|Era_4X(?:_2GB)?)(?:[);/ ]|$)|BLACK-1XM'
   device: 'smartphone'
   models:
     - regex: 'BLACK-1XM'
@@ -16841,6 +16847,8 @@ Xolo:
       model: 'Era $1X'
     - regex: 'Era_4X_2GB(?:[);/ ]|$)'
       model: 'Era 4X 2GB'
+    - regex: 'Era[ _]2V(?:[);/ ]|$)'
+      model: 'Era 2V'
     - regex: '(Q600 Club|Q600|Q700s?|Q800|Q1000s Plus|Q1000s|Q1000[ _]Opus|Q1010i|Q2000|Omega[ _]5.[05])(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Xolo[ _]?([^;/]+) Build'
@@ -21459,7 +21467,7 @@ Seuic:
 
 # Centric
 Centric:
-  regex: 'Centric[- ]CM(?:5001|33[23]1|3321Plus)(?:[);/ ]|$)'
+  regex: '(?:Centric[- ]CM(?:5001|33[23]1|3321Plus)|CM4331)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Centric[- ])?CM5001'
@@ -21470,6 +21478,8 @@ Centric:
       model: 'P1'
     - regex: '(?:Centric[- ])?CM3331'
       model: 'L3'
+    - regex: '(?:Centric[- ])?CM4331'
+      model: 'G1'
 
 # Kata mobile (secure.katadigital.com)
 Kata:
