feat(bot) added service bot from Yahoo! Mail Proxy
issue #6735

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4177,3 +4177,12 @@
     name: WooRank
     category: Crawler
     url: https://www.woorank.com/bot
+-
+  user_agent: YahooMailProxy; https://help.yahoo.com/kb/yahoo-mail-proxy-SLN28749.html
+  bot:
+    name: Yahoo! Mail Proxy
+    category: Service Agent
+    url: https://help.yahoo.com/kb/yahoo-mail-proxy-SLN28749.html
+    producer:
+      name: Yahoo! Inc.
+      url: http://www.yahoo.com
