feat(device) detect brand DELL model: Latitude 7480

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7296,3 +7296,35 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Microsoft Office OneNote/16.0.11929.20762 (Windows/10.0; Desktop WOW64; en-GB; Desktop app; Dell Inc./Latitude 7480)
+  os:
+    name: Windows
+    version: "10.0"
+    platform: x64
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: 16.0.11929.20762
+  device:
+    type: desktop
+    brand: Dell
+    model: Latitude 7480
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office OneNote/16.0.13328.20478 (Windows/10.0; Desktop WOW64; en-GB; Universal app; Dell Inc./XXX TEST)
+  os:
+    name: Windows
+    version: "10.0"
+    platform: x64
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: 16.0.13328.20478
+  device:
+    type: desktop
+    brand: Dell
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
