feat(device) detect brand Asus model: ZenFone 7 (ZS670KS) feat(device) detect brand Asus model: ZenFone 7 Pro (ZS671KS) feat(device) rename model ZenFone 7 Pro => ZenFone 7 (I002D)

--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -4721,7 +4721,7 @@
   device:
     type: smartphone
     brand: Asus
-    model: ZenFone 7 Pro
+    model: ZenFone 7
   os_family: Android
   browser_family: Chrome
 -
